feat: add custom filters to stock
